--- a/mydatabrickscodes/MyFirstNotebook.ipynb
+++ b/mydatabrickscodes/MyFirstNotebook.ipynb
@@ -26,6 +26,24 @@
    "execution_count": 0,
    "metadata": {
     "application/vnd.databricks.v1+cell": {
+     "cellMetadata": {},
+     "inputWidgets": {},
+     "nuid": "087e7acc-e037-4f00-bcbc-49c3ae0d1846",
+     "showTitle": false,
+     "tableResultSettingsMap": {},
+     "title": ""
+    }
+   },
+   "outputs": [],
+   "source": [
+    "/Workspace/Users/naav230@gmail.com/mydatabrickssource/mydatasource"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 0,
+   "metadata": {
+    "application/vnd.databricks.v1+cell": {
      "cellMetadata": {
       "byteLimit": 2048000,
       "rowLimit": 10000
@@ -39,7 +57,7 @@
    },
    "outputs": [],
    "source": [
-    "df = spark.read.option(\"header\", \"true\").csv(\"s3://naavsdatabricksbucket/NaavDatabrickFiles/calendar.csv\")\n",
+    "df = spark.read.option(\"header\", \"true\").csv(\"/Workspace/Users/naav230@gmail.com/mydatabrickssource/mydatasource/calendar.csv\")\n",
     "display(df)"
    ]
   },
@@ -87,7 +105,7 @@
     },
     "pythonIndentUnit": 4
    },
-   "notebookName": "MyFirstNootebook",
+   "notebookName": "MyFirstNotebook",
    "widgets": {}
   },
   "language_info": {
